fix text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,9 @@ li{
 }
 
 p{
-  text-overflow: ellipsis;
+  width: 150px;
+  height: 50px;
+  text-overflow: inherit;
 }
 
 img{
